fixed the problem where the nav was not stretching full width after media query

--- a/layout.css
+++ b/layout.css
@@ -21,13 +21,16 @@ body{
 header{
     grid-area: header;
 }
-nav{
+ ul{
     grid-area:nav;
 }
-nav>ul{
-    display: grid;
-    grid-template-rows: 1fr .25fr 1fr 1fr;
+ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 article.firstArticle{
     grid-area: articleOne;
 }
@@ -48,7 +51,7 @@ footer{
         height:100vh;
         grid-template-columns:1fr 1fr;
         grid-gap:.25rem;
-        grid-template-rows:2fr .25fr 4fr 1.25fr;
+        grid-template-rows:2fr .25fr 2fr 2fr .5fr;
         grid-template-areas:
             "header header"
             "nav nav"
@@ -57,8 +60,9 @@ footer{
             "footer footer";
     }
     
-    nav>ul{
+    ul{
         display: flex;
+        flex-direction: row;
         justify-content: space-around;
         align-items: center;
     }
