--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
     --headerColor:white;
     --navBackgroundColor: rgba(0,172,21,1);
     --navColor:rgba(43,90,117,1);
+    --navFontWeight:bolder;
     --navTextShadow: 1px 1px 1px white;
     --mainBackgroundColor: rgba(196,196,196,1);
     --articleBackgroundColor: whitesmoke;
     --articleColor:black;
-    --titleBackgroundColor: rgba(230,179,83,1);
+    --titleBackgroundColor: rgba(230,179,83,.5);
     /* fonts */
     --headingsFont: ;
     /* borders */
@@ -33,30 +34,39 @@ header{
     box-sizing: border-box;
     border:var(--headerBorder);
     color:var(--headerColor);
+    position: relative;
 }
 header h1{
     background-color: var(--titleBackgroundColor);
+    border-radius: .5rem;
     box-sizing: border-box;
     text-align: center;
     color:var(--navColor);
     text-shadow: 1px 1px 1px white;
+    position: absolute;
+    width:50%;
+    top:40%;
+    left: 25%;
 }
-nav{
+ul{
     background-color: var(--navBackgroundColor);
     border: var(--navBorder);
     box-sizing: border-box;
     color:var(--navColor);
+    font-weight: var(--navFontWeight);
+    list-style-type: none;
     overflow: auto;
     text-shadow:var(--navTextShadow);
 }
-nav ul{
+ul{
     box-sizing: border-box;
     list-style-type: none;
 }
-nav li{
-    box-sizing: border-box;   
+li{
+    box-sizing: border-box;
+    font-weight: var(--navFontWeight);   
 }
-nav a{
+a{
     color: inherit;
     text-decoration: none;
 }
@@ -77,6 +87,7 @@ footer{
 }
 footer a{
     color:var(--navColor);
+    font-weight: var(--navFontWeight);
     text-decoration: none;
     text-shadow: var(--navTextShadow);
     padding:1rem;
